# CodingChallengeBM

./: .gitignore  CMakeLists.txt  README.md
src/: BitrateLadder.h  CMakeLists.txt  EncodeRendition.h  EncodingRunner.h  MyEncodingRunner.cpp  MyEncodingRunner.h  NaiveEncodingRunner.cpp  NaiveEncodingRunner.h
test/: CMakeLists.txt  MyEncodingRunnerTest.cpp  NaiveEncodingRunnerTest.cpp
